# teleprompter

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_new.md  build_macos.sh  build_windows.bat  design.md  pyproject.toml  pytest.ini  test_sensitivity.py  test_speech_indicator.py
.github/workflows/: build-release.yml
docs/: PHASE3_SUMMARY.md  refactor-plan.md  teleprompter-prd.md  ui-improvement-plan.md
docs/api/: index.md  protocols.md  services.md
src/teleprompter/: __init__.py  __main__.py  app.py  base_widgets.py  config.py  container.py  custom_widgets.py  file_manager.py  icon_manager.py  main.py  markdown_parser.py  protocols.py  services.py  settings_manager.py  style_manager.py  teleprompter.py  toolbar_manager.py  voice_control_widget.py  voice_detector.py
src/teleprompter/backend/: __init__.py  main.py
src/teleprompter/backend/api/: __init__.py  main.py
src/teleprompter/backend/api/models/: __init__.py  domain.py  requests.py  responses.py
src/teleprompter/backend/api/websocket/: __init__.py  handlers.py
src/teleprompter/backend/core/: __init__.py  protocols.py
src/teleprompter/backend/domain/: __init__.py  file_manager.py
src/teleprompter/backend/services/: __init__.py  adapters.py  file_watcher_adapter.py  voice_adapter.py
src/teleprompter/backend/settings/: __init__.py  json_settings.py
src/teleprompter/backend/utils/: __init__.py  logging.py
src/teleprompter/core/: __init__.py  config.py  configuration.py  container.py  exceptions.py  protocols.py  services.py
src/teleprompter/domain/content/: __init__.py  analyzer.py  file_manager.py  file_watcher.py  manager.py  parser.py
src/teleprompter/domain/reading/: __init__.py  controller.py  metrics.py
src/teleprompter/domain/voice/: __init__.py  detector.py
src/teleprompter/infrastructure/: icon_manager.py  logging.py  settings_manager.py
src/teleprompter/ui/: __init__.py  app.py
src/teleprompter/ui/builders/: widget_builder.py
src/teleprompter/ui/managers/: __init__.py  icon_manager.py  responsive_manager.py  style_manager.py  toolbar_manager.py
src/teleprompter/ui/widgets/: __init__.py  content_loader.py  custom_widgets.py  javascript_manager.py  keyboard_commands.py  teleprompter_widget.py  voice_control_widget.py
src/teleprompter/ui/widgets/base/: __init__.py  base_widgets.py
src/teleprompter/utils/: logging.py  resource_path.py  settings_manager.py  validators.py
tests/: conftest.py  test.md  test_voice.py  test_voice_button.py
tests/backend/: test_api_content.py  test_api_reading.py  test_api_settings.py  test_api_voice.py  test_file_watcher_adapter.py  test_json_settings.py  test_voice_adapter.py  test_websocket.py
tests/integration/: test_app_integration.py  test_services_integration.py  test_widget_integration.py
tests/unit/: test_app_basic.py  test_configuration.py  test_content_analyzer.py  test_content_manager.py  test_core_exceptions.py  test_file_manager.py  test_infrastructure_logging.py  test_markdown_parser.py  test_reading_metrics.py  test_scroll_controller.py  test_service_container.py  test_style_manager.py  test_toolbar_manager.py  test_validators.py  test_voice_activity_detector.py
