[project]
name = "teleprompter"
version = "0.1.0"
description = "A simple teleprompter app"
authors = [
    {name = "Michael VanDyke",email = "michaeljamesvandyke@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "pyqt6-webengine (>=6.9.0,<7.0.0)",
    "webrtcvad (>=2.0.10,<3.0.0)",
    "sounddevice (>=0.5.1,<1.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"
poethepoet = "^0.36.0"

[tool.ruff]
# Same as Black
line-length = 88

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused imports in __init__ files are ok

[tool.poe.tasks]
lint = { cmd = "ruff check --fix .", help = "Run ruff linter and fix issues automatically" }
format = { cmd = "ruff format .", help = "Format code using ruff" }
check = { sequence = ["lint", "format"], help = "Run both linting and formatting" }
run = { cmd = "python -m src.teleprompter.main", help = "Run the teleprompter application" }